# doc-room

./: bot.py  bot_control.py  chat.py  controller_handler.py  main.py  pyproject.toml
chatbot/: chat.py  medical_diagnosis.py  parameters.py
discord_bot/: __init__.py  bot.py  doc_discord_bot.py  memory.py  parameters.py  server.py  state.py
